Fix z-index to hide border under component

--- a/docs/landing/src/styles/component.css
+++ b/docs/landing/src/styles/component.css
@@ -21,6 +21,7 @@
 
     border: 2px solid red;
     border-radius: inherit;
+    z-index: -1;
 }
 
 .component:hover::after {
